--- a/Dlvl5/template/basic_app/index.html
+++ b/Dlvl5/template/basic_app/index.html
@@ -1,6 +1,6 @@
 {% extends "basic_app/base.html"%}
 {% block body_block %}
   <div class="jumbotron">
-    <h1>Django Level Five</h1>
+    <h1>Stop being lazy and go take a bath</h1>
   </div>
 {% endblock %}
